Полное распознавание обьектов.

--- a/AutoClicker/AutoClicker.csproj
+++ b/AutoClicker/AutoClicker.csproj
@@ -79,6 +79,7 @@
     <Compile Include="ApplicationForm.Designer.cs">
       <DependentUpon>ApplicationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Fruits.cs" />
     <Compile Include="GameAlgorithm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
